# gsm0710muxd

./: AUTHORS  ChangeLog  Makefile.am  README  TODO  autogen.sh  configure.ac
data/: Makefile.am  gsm0710muxd  gsm0710muxd.conf  org.pyneo.muxer.service.in
src/: Makefile.am  gsm0710muxd.c  gsm0710muxd.vapi  mux.h  mux.xml  muxercontrol.c  muxercontrol.h  muxercontrol.vala
